<resources>
    <string name="app_name">Go4LunchAppOC</string>
    <string name="app_name_toolbar">I\'m Hungry!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_restaurant_detail">RestaurantDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="bottom_facebook">Sign in with Facebook</string>
    <string name="bottom_gmail">Sign in with Google</string>
    <string name="bottom_twitter">Sign in with Twitter</string>
    <string name="bottom_login">Sign in with Login</string>
    <string name="connection_succeed">Connection succeed!</string>
    <string name="error_authentication_canceled">Authentication canceled!</string>
    <string name="error_no_internet">Not internet!</string>
    <string name="error_unknown_error">Unknown error!</string>
    <string name="Restaurant_reminder">Restaurant reminder</string>

    <string name="facebook_application_id">3430815187239798</string>
    <string name="fb_login_protocol_scheme">fb3430815187239798</string>
    <string name="facebook_client_token">69ddda471073cf731c46cefaf1feda2d</string>

    <!-- to toggle the open close button of the navigation drawer -->
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="info_no_email_found" />
    <string name="info_no_username_found" />
    <string name="notification">Notification</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="today_s_lunch">Today\'s lunch</string>
    <string name="have_you_decided_on_a_restaurant_yet">Have you decided on a restaurant yet?</string>
    <string name="call">CALL</string>
    <string name="website">WEBSITE</string>
    <string name="like">LIKE</string>
    <string name="_5_avenue_des_renards">5 avenue des renards</string>
    <string name="le_zinc">Le Zinc</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="todo4">TODO</string>
    <string name="todo5">TODO5</string>
    <string name="todo6">TODO</string>
    <string name="nom_du_restaurant">Nom du restaurant</string>
    <string name="todo7">TODO</string>
    <string name="adresse">adresse</string>
    <string name="todo8">TODO</string>
    <string name="le_zinc1">Le Zinc</string>
    <string name="_20_rue_de_paris">20 rue de Paris</string>
    <string name="open">Open</string>
    <string name="_200m">200m</string>
    <string name="todo10">TODO</string>
    <string name="_2">(2)</string>
    <string name="kylian_is_eating_french_chez_guy">Kylian is eating french (Chez Guy)</string>
    <string name="todo11">TODO</string>
    <string name="todo12">TODO</string>
    <string name="setting">Setting</string>
    <string name="todo13">TODO</string>
    <string name="kylian">Kylian</string>
    <string name="go4lunch">Go4Lunch</string>
    <string name="todo14">TODO</string>
    <string name="kyllian_mbappe">Kyllian Mbappe</string>
    <string name="km_gmail_com">km@gmail.com</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="workmates">Workmates</string>
    <string name="your_lunch">YOUR LUNCH</string>
    <string name="settings">SETTINGS</string>
    <string name="logout">LOGOUT</string>


</resources>