<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/item_list_restaurant_picture"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="320dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:contentDescription="@string/todo8" />

    <TextView
        android:id="@+id/item_list_restaurant_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/le_zinc1"
        android:textSize="15sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:lineSpacingExtra="3dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/item_list_restaurant_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="200dp"
        android:maxLines="1"
        android:text="@string/_20_rue_de_paris"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="@id/item_list_restaurant_name" />

    <TextView
        android:id="@+id/item_list_restaurant_opening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="@id/item_list_restaurant_address"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:id="@+id/item_list_restaurant_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_200m"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="@id/item_list_restaurant_picture"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="@id/item_list_restaurant_picture"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="@id/item_list_restaurant_distance"
        app:srcCompat='@drawable/ic_baseline_person_outline_24'
        android:contentDescription="@string/todo10" />

    <TextView
        android:id="@+id/item_list_restaurant_person_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:textSize="12sp"
        android:layout_marginEnd="80dp"
        app:layout_constraintEnd_toEndOf="@id/item_list_restaurant_picture"
        android:layout_marginTop="28dp"
        app:layout_constraintTop_toTopOf="@id/item_list_restaurant_distance" />

    <RatingBar
        android:id="@+id/item_list_restaurant_rating_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/ratingBarStyleSmall"
        android:numStars="3"

        android:layout_marginEnd="75dp"
        app:layout_constraintEnd_toEndOf="@id/item_list_restaurant_picture"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toTopOf="@id/item_list_restaurant_person_number" />



</androidx.constraintlayout.widget.ConstraintLayout>