<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_color"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_marginBottom="16dp"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:thumb="@drawable/custom_switch_thumb"
            android:track="@drawable/switch_color_on"
            android:layout_gravity="center"
            android:checked="true"
            android:thumbTextPadding="16dp"
            tools:ignore="UseSwitchCompatOrMaterialXml" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off"
            android:textColor="@color/white"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="75dp"
            android:layout_marginTop="-20dp"
            android:paddingEnd="8dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on"
            android:textColor="@color/white"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="75dp"
            android:layout_marginTop="-20dp"
            android:paddingStart="8dp"
            />

    </LinearLayout>

    <ImageView
        android:id="@+id/close_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_close_24"
        android:layout_gravity="top|end"
        android:layout_margin="1dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Setting"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/white"
        />
</FrameLayout>